Nprobe vctree (#84)
* [ASTERIXDB-3624][FUN] Fix record_remove_fields() type computer

- user model changes: no
- storage format changes: no
- interface changes: no

Details:
Fix the type computer to match what the runtime returns.

Ext-ref: MB-67309
Change-Id: I90f97832f595261e8976e88f47c068644ad720c0
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19991
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>

* [NO ISSUE][*DB][STO] Return null from readAllBytes() in no-op client

Ext-ref: MB-65877
Change-Id: I9642b1d32beb4ab93b0914a20c38ad1476abbab0
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/20006
Reviewed-by: Michael Blow <mblow@apache.org>
Reviewed-by: Murtadha Hubail <mhubail@apache.org>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Michael Blow <mblow@apache.org>
Contrib: Michael Blow <mblow@apache.org>

* [NO ISSUE][*DB][MISC] += ClusterStateManager.isPendingRemoval

Ext-ref: MB-67132
Change-Id: Ib7741273d74547f5a6951f3d3906d71cc1ab0119
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/20007
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Michael Blow <mblow@apache.org>
Reviewed-by: Hussain Towaileb <hussainht@gmail.com>

* [NO ISSUE][EXT] Query fails on GCS external delta table

- user model changes: no
- storage format changes: no
- interface changes: no

Ext-ref: MB-67321
Change-Id: Ibd700a0c4e740139630869d98ce7cf52389ea5cf
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19984
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Hussain Towaileb <hussainht@gmail.com>
Reviewed-by: Peeyush Gupta <peeyush.gupta@couchbase.com>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>

* [ASTERIXDB-3611][RT] Add more stats to query profile

- user model 